Fix to Header on Smaller Devices + Minor UI centering

--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -10,26 +10,21 @@
   min-width: 400px;
   max-width: 1000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
 .leftContainer {
-  /* sflex-grow: 1; */
-  /* flex-shrink: 1; */
+  flex-grow: 1;
   display: flex;
-  /* justify-content: flex-start; */
   align-items: center;
   flex-wrap: nowrap;
   text-align: center;
 }
 
 .rightContainer {
-  /* flex-shrink: 2; */
   display: flex;
   align-items: center;
   padding: 10px;
-  /* padding-bottom: 10px; */
-  /* text-align: center; */
 }
